# IDV-AQL5

./: .gitignore  .gitlab-ci.yml  README.md
.github/workflows/: ci.yml
ThrottleX_Context_Kit/: .gitlab-ci.yml  BENCHMARK_RESULTS.md  README.md  README_Context.md  pyproject.toml  sbom.json
ThrottleX_Context_Kit/data/: tenants.json
ThrottleX_Context_Kit/docs/: 01-EXIGENCES.md  02-MATRICE_DECISION.md  03-POLITIQUE_TESTS.md  04-STRATEGIE_TESTS.md  05-PLAN_TESTS.md  07-DIAGRAMMES.md  (+11 more)
ThrottleX_Context_Kit/src/: .coverage  .env.example  Dockerfile  README.md  coverage.xml  docker-compose.yml  pyproject.toml
ThrottleX_Context_Kit/src/.hypothesis/constants/: 075ac21a54120eee  10ebec841f0e2157  212d833f5dc81ca7  38ef3f5ce0a3f369  48676241b55e1aa4  55a6c497b548adf3  579a4e972343dcff  5a3679d8059f3324  7aad28d1ba5c9ea4  8bc4a4bface0ccbe  9d228f92bc27defe  cb2c3ea121de400c
ThrottleX_Context_Kit/src/.hypothesis/examples/04e6b3400353b141/: 28a4b5d67ce7e8c6
ThrottleX_Context_Kit/src/benchmarks/: __init__.py  benchmark_compare.py  benchmark_latency.py
ThrottleX_Context_Kit/src/benchmarks/results/: BENCHMARK_COMPARISON.md  baseline_latest.json  concurrent_50_5000.json  optimized_20260206_155452.json  sequential_1000.json
ThrottleX_Context_Kit/src/tests/: conftest.py  test_properties.py
ThrottleX_Context_Kit/src/tests/integration/: test_api.py
ThrottleX_Context_Kit/src/tests/unit/: test_app.py  test_logging.py  test_models.py  test_repository.py  test_service.py  test_token_bucket.py
ThrottleX_Context_Kit/src/throttlex/: __init__.py  __main__.py  app.py  config.py  logging.py  metrics.py  models.py  repository.py  service.py
ThrottleX_Context_Kit/src/throttlex/algorithms/: __init__.py  token_bucket.py
soutenance/: SLIDES_PLAN.md  SYNTHESE_ACTIVITE.docx  ci.md  rapport_final.docx
(+3 files in other folders)
