# ThrottleX V0 - Rate Limiter Service
# Python 3.11+ / FastAPI / Redis

[project]
name = "throttlex"
version = "0.1.0"
description = "Multi-tenant API Rate Limiting & Quotas Service"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Équipe Plateforme", email = "platform@example.com" }
]

dependencies = [
    "fastapi>=0.109.0,<0.120.0",
    "uvicorn[standard]>=0.27.0,<0.30.0",
    "redis>=5.0.0,<6.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "prometheus-client>=0.19.0,<1.0.0",
    "structlog>=24.1.0,<25.0.0",
    "httpx>=0.26.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "httpx>=0.26.0,<1.0.0",
    "ruff>=0.2.0,<1.0.0",
    "mypy>=1.8.0,<2.0.0",
    "bandit>=1.7.0,<2.0.0",
    "safety>=3.0.0,<4.0.0",
    "fakeredis>=2.21.0,<3.0.0",
    "hypothesis>=6.98.0,<7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "C4", "PT"]
ignore = ["S101"]  # Allow assert in tests

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=throttlex --cov-report=term-missing --cov-report=xml"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["throttlex"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
fail_under = 50
